Fixes and tweaks for dark mode

--- a/src/styles/general.module.scss
+++ b/src/styles/general.module.scss
@@ -5,7 +5,7 @@
 
 .modalContent {
   overflow: initial;
-} 
+}
 
 .outerWrapper {
   border: 1px solid var(--color_input_border_color);
@@ -33,6 +33,6 @@
     font-weight: bold;
     font-size: 18px;
     text-align: center;
-    color: var(--color_primary);
+    color: var(--color_text_dark);
   }
 }
